--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          submodules: true
-          fetch-depth: 0
-
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          persist-credentials: true
+  
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
@@ -28,6 +28,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
-          github_token: ${{ secrets.GH_PAGE_ACTION_TOKEN }}
+          deploy_key: ${{ secrets.SSH_PRIVATE_KEY }}
           publish_dir: ./public
           commit_message: ${{ github.event.head_commit.message }}
